--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beer",
+  "name": "peiyou",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "tianxinyuan <tianxinyuan222>",
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "karma-chai": "^0.1.0",
     "axios": "^0.21.1",
     "element-ui": "^2.15.1",
     "js-cookie": "^2.2.1",
@@ -21,11 +22,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.18.1",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.1",
+    "babel-polyfill": "^6.26.0",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
@@ -39,16 +42,20 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
+    "element-ui": "^2.2.1",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
+    "express": "^4.16.2",
+    "express-fileupload": "^1.1.9",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "font-awesome": "^4.7.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
@@ -75,7 +82,12 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.6",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
+    "vuex": "^3.0.1"
   },
   "engines": {
     "node": ">= 6.0.0",
