--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "karma-chai": "^0.1.0",
     "axios": "^0.21.1",
     "element-ui": "^2.15.1",
     "js-cookie": "^2.2.1",
+    "karma-chai": "^0.1.0",
     "vue": "^2.5.2",
+    "vue-pdf": "^4.3.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
